Fixed alignment.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -235,5 +235,5 @@ label {
 
 .text-indent{padding-left: 15px;}
 
-#coc, #alert, #load-credit-page {@extend .container;}
+#coc, #alert, #load-credit-page, #domain_info {@extend .container;}
 
